--- a/views/partials/navigation.ejs
+++ b/views/partials/navigation.ejs
@@ -1,9 +1,25 @@
-<nav>
-  <ul>
-    <li>Home</li>
-    <li>Custom</li>
-    <li>Sedan</li>
-    <li>SUV</li>
-    <li>Truck</li>
+<nav role="navigation" aria-label="Main site navigation">
+  <ul role="menubar">
+    <li role="none">
+      <a href="/" role="menuitem" aria-label="Go to homepage">Home</a>
+    </li>
+    <li role="none">
+      <a href="/custom" role="menuitem" aria-label="Browse custom vehicles"
+        >Custom</a
+      >
+    </li>
+    <li role="none">
+      <a href="/sedan" role="menuitem" aria-label="Browse sedan vehicles"
+        >Sedan</a
+      >
+    </li>
+    <li role="none">
+      <a href="/suv" role="menuitem" aria-label="Browse SUV vehicles">SUV</a>
+    </li>
+    <li role="none">
+      <a href="/truck" role="menuitem" aria-label="Browse truck vehicles"
+        >Truck</a
+      >
+    </li>
   </ul>
 </nav>
