--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,4 +1,4 @@
 <% const d = new Date(); let year = d.getFullYear() %>
-<footer>
+<footer role="contentinfo" aria-label="Site footer with copyright information">
   <p class="copyright">&copy; <%= year %>, CSE 340 App</p>
 </footer>
