--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,8 +1,15 @@
-<header id="top-header">
+<header id="top-header" role="banner">
   <span class="siteName">
-    <a href="/" title="Return to home page">CSE Motors</a>
+    <a href="/" title="Return to home page" aria-label="CSE Motors homepage"
+      >CSE Motors</a
+    >
   </span>
-  <div id="tools">
-    <a title="Click to log in" href="/account/login">My Account</a>
+  <div id="tools" role="navigation" aria-label="User account tools">
+    <a
+      title="Click to log in"
+      href="/account/login"
+      aria-label="Access my account login page"
+      >My Account</a
+    >
   </div>
 </header>
