--- a/views/index.ejs
+++ b/views/index.ejs
@@ -40,7 +40,7 @@
         >Flux Capacitor</a
       >
     </div>
-    <div class="upgrade-item" role="gridcell">
+    <div class="upgrade-item">
       <img
         src="/images/upgrades/flame.jpg"
         alt="Red and yellow flame decal design"
@@ -51,7 +51,7 @@
         >Flame Decals</a
       >
     </div>
-    <div class="upgrade-item" role="gridcell">
+    <div class="upgrade-item">
       <img
         src="/images/upgrades/bumper_sticker.jpg"
         alt="Hello World bumper sticker design"
@@ -62,7 +62,7 @@
         >Bumper Stickers</a
       >
     </div>
-    <div class="upgrade-item" role="gridcell">
+    <div class="upgrade-item">
       <img
         src="/images/upgrades/hub-cap.jpg"
         alt="Chrome wheel hub cap with decorative spokes"
