gridcell role caused html error

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -30,7 +30,7 @@
       role="grid"
       aria-label="Available vehicle upgrades"
     >
-      <div class="upgrade-item" role="gridcell">
+      <div class="upgrade-item">
         <img
           src="/images/upgrades/flux-cap.png"
           alt="Flux Capacitor upgrade component"
