week 3 changes Activity 1

--- a/views/partials/navigation.ejs
+++ b/views/partials/navigation.ejs
@@ -1,5 +1,5 @@
-<nav role="navigation" aria-label="Main site navigation">
-  <ul role="menubar">
+<!-- <nav role="navigation" aria-label="Main site navigation"> -->
+<!-- <ul role="menubar">
     <li role="none">
       <a href="/" role="menuitem" aria-label="Go to homepage">Home</a>
     </li>
@@ -21,5 +21,6 @@
         >Truck</a
       >
     </li>
-  </ul>
-</nav>
+  </ul> -->
+<!-- </nav> -->
+<nav><%- nav %></nav>
