--- a/views/account/login.ejs
+++ b/views/account/login.ejs
@@ -15,12 +15,17 @@
     />
 
     <label for="account_password">Password:</label>
+    <span class="password-requirements"
+      >Passwords must be at least 12 characters and contain at least 1 number, 1
+      capital letter and 1 special character</span
+    >
     <input
       type="password"
       id="account_password"
       name="account_password"
       required
       placeholder="Enter your password"
+      pattern="^(?=.*\d)(?=.*[a-z])(?=.*[A-Z])(?=.*[^a-zA-Z0-9])(?!.*\s).{12,}$"
     />
 
     <button type="submit" class="login-btn">Login</button>
