--- a/views/account/register.ejs
+++ b/views/account/register.ejs
@@ -1,6 +1,6 @@
 <h1><%= title %></h1>
 <%- messages() %> <% if (errors) { %>
-<ul class="error-list">
+<ul class="notice">
   <% errors.array().forEach(error => { %>
   <li><%= error.msg %></li>
   <% }) %>
