--- a/views/account/management.ejs
+++ b/views/account/management.ejs
@@ -1,8 +1,23 @@
 <h1><%= title %></h1>
 
 <%- messages() %> <% if (locals.loggedin) { %>
-<h2>Welcome <%= accountData.account_firstname %>!</h2>
+<h2>Welcome <%= accountData.account_firstname %></h2>
+
+<p>
+  <a
+    href="/account/update/<%= accountData.account_id %>"
+    title="Update account information"
+  >
+    Update Account Information
+  </a>
+</p>
+
+<% if (accountData.account_type === 'Employee' || accountData.account_type ===
+'Admin') { %>
+<h3>Inventory Management</h3>
+<p>
+  <a href="/inv/" title="Access inventory management"> Manage Inventory </a>
+</p>
+<% } %> <% } else { %>
 <p>You're logged in.</p>
-<% } else { %>
-<p>Please log in to view this page.</p>
 <% } %>
